kafka-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kafka-network
  namespace: kafka
spec:
  podSelector:
    matchLabels:
      network/kafka-network: "true"
  ingress:
  - from:
    - podSelector: {}  # Allow all pods
  egress:
  - to:
    - podSelector: {}
  policyTypes:
  - Ingress
